[package]
name = "place-reserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.17.0", features=["macros", "sync", "time", "rt-multi-thread"]}
warp = "0.3.2"
lazy_static = "1.4.0"
image = "0.24.1"
tokio-stream = "0.1.8"
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
